--- a/package.json
+++ b/package.json
@@ -6,22 +6,7 @@
   "directories": {
     "example": "examples"
   },
-  "devDependencies": {
-    "babel-core": "^5.6.3",
-    "babel-eslint": "^3.1.17",
-    "babel-loader": "^5.1.4",
-    "eslint": "^0.23.0",
-    "eslint-plugin-react": "^2.5.2",
-    "node-libs-browser": "^0.5.2",
-    "react-hot-loader": "^1.2.7",
-    "webpack": "^1.9.11",
-    "webpack-dev-server": "^1.9.0"
-  },
-  "devDependencies": {
-    "react": "^0.13.3"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "repository": {
@@ -37,5 +22,23 @@
   "bugs": {
     "url": "https://github.com/vramana/react-learner-kit/issues"
   },
-  "homepage": "https://github.com/vramana/react-learner-kit#readme"
+  "homepage": "https://github.com/vramana/react-learner-kit#readme",
+  "dependencies": {
+    "react": "^0.13.3"
+  },
+  "devDependencies": {
+    "babel-core": "^5.6.3",
+    "babel-eslint": "^3.1.17",
+    "babel-loader": "^5.1.4",
+    "css-loader": "^0.14.5",
+    "eslint": "^0.23.0",
+    "eslint-plugin-react": "^2.5.2",
+    "node-libs-browser": "^0.5.2",
+    "node-sass": "^3.2.0",
+    "react-hot-loader": "^1.2.7",
+    "sass-loader": "^1.0.2",
+    "style-loader": "^0.12.3",
+    "webpack": "^1.9.11",
+    "webpack-dev-server": "^1.9.0"
+  }
 }
