--- a/package.json
+++ b/package.json
@@ -27,18 +27,17 @@
     "react": "^0.13.3"
   },
   "devDependencies": {
-    "babel-core": "^5.6.3",
-    "babel-eslint": "^3.1.17",
-    "babel-loader": "^5.1.4",
-    "css-loader": "^0.14.5",
-    "eslint": "^0.23.0",
-    "eslint-plugin-react": "^2.5.2",
+    "babel-core": "^5.8.22",
+    "babel-eslint": "^4.0.10",
+    "babel-loader": "^5.3.2",
+    "css-loader": "^0.16.0",
+    "eslint": "^1.2.1",
+    "eslint-config-airbnb": "0.0.8",
+    "eslint-plugin-react": "^3.2.3",
     "node-libs-browser": "^0.5.2",
-    "node-sass": "^3.2.0",
-    "react-hot-loader": "^1.2.7",
-    "sass-loader": "^1.0.2",
+    "react-hot-loader": "^1.2.8",
     "style-loader": "^0.12.3",
-    "webpack": "^1.9.11",
-    "webpack-dev-server": "^1.9.0"
+    "webpack": "^1.11.0",
+    "webpack-dev-server": "^1.10.1"
   }
 }
